align catdiv with other elements in same category Ensure metabox sections have enough padding to display pro-nudge at bottom

--- a/assets/admin/css/style.css
+++ b/assets/admin/css/style.css
@@ -105,6 +105,7 @@ body.post-type-tinypress_link #submitdiv #major-publishing-actions {
 body.post-type-tinypress_link #tinypress_link_catdiv .inside,
 body.post-type-tinypress_link #tagsdiv-tinypress_link_tags .inside {
     padding: 0;
+    margin-left: 25px;
     width: 100%;
     display: inline-block;
 }
