--- a/includes-core/assets/css/core.css
+++ b/includes-core/assets/css/core.css
@@ -124,3 +124,7 @@
 .tinypress-pro-nudge-wrapper .tooltip-text {
     text-align: center !important;
 }
+
+body.post-type-tinypress_link .wpdk_settings-section {
+    padding-bottom: 180px !important;
+}
